# custom_mcp_python

./: .env.example  .gitignore  Makefile  README.md  environment.yaml  pyproject.toml  pytest.ini
data/: hello.txt
scripts/: test_client.py
src/mcp_tool_gateway/: __init__.py  app.py  auth.py  config.py  lifespan.py  main.py  mcp_instance.py  middleware.py  security.py  server.py
src/mcp_tool_gateway/api/: router.py
src/mcp_tool_gateway/api/routes/: auth.py
src/mcp_tool_gateway/core/: auth.py  config.py
src/mcp_tool_gateway/mcp/: server.py
src/mcp_tool_gateway/mcp/tools/: files.py  web.py
src/mcp_tool_gateway/routes/: __init__.py  auth.py  health.py  tools.py
src/mcp_tool_gateway/security/: __init__.py  auth.py  jwt.py  middleware.py
src/mcp_tool_gateway/services/: web_service.py
src/mcp_tool_gateway/tools/: __init__.py  _base.py  add.py  base.py  files.py  ping.py  registry.py  web.py  web_search.py
tests/: test_mcp_integration.py  test_tools.py  test_tools_integration.py
