[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-tool-gateway"
version = "0.1.0"
description = "Starter MCP tool gateway microservice (Python) using the official MCP SDK."
requires-python = ">=3.11"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
