[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-tool-gateway"
version = "0.1.0"
description = "FastAPI gateway that exposes an MCP (FastMCP) server with optional JWT auth."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "mcp>=1.7.1",
  "fastapi>=0.110",
  "uvicorn>=0.30.0",
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "python-dotenv>=1.0.1",
  "PyJWT[crypto]>=2.10.1",
  "duckduckgo-async-search>=0.1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
